fix overflow

--- a/src/components/page/HomePage/HomePage.module.css
+++ b/src/components/page/HomePage/HomePage.module.css
@@ -1,3 +1,4 @@
 .root {
   overflow-y: auto;
+  overflow-x: hidden;
 }
